2014-09-22  Lingyun Yang  <lyyang@725-controldesk05.cs.nsls2.local>

	* aphla/element.py (CaElement.put): merge ramp to put with trig=1

2014-09-13  Lingyun Yang  <lyyang@NSLS2LANG-LT.local>

	* aphla/hlalib.py (getTimestamp): add
	* aphla/element.py: add wait option in element.put

2014-09-10  Lingyun Yang  <lyyang@debian7>

	* add measKickedTbtData
	* add getLifetime and rename old one to measLifetime
	* add getLifetimeCurrent

2014-09-09  Lingyun Yang  <lyyang@debian7>

	* add dms/nsls2.py for physics IOC
	* add saveElement/putElement
	* add attrs into nsls2 lat snapshot

2013-01-06  Lingyun Yang  <lyyang@nsls2yang.nsls2.bnl.gov>

	* merge heads

2013-01-03  Lingyun Yang  <lyyang@nsls2yang.nsls2.bnl.gov>

	* new ORM data
	* new quad errors (smaller)

2012-12-06  Lingyun Yang  <lyyang@nsls2yang>

	* new sutrcture
	* replace ap.initNSLS2() with ap.machines.init("nsls2")
	* replace ap.initNSLS2V2(), ap.initNSLS2V3BSRLine() in a similar way

2012-08-28  Lingyun Yang  <lyyang@debian.localdomain>

	* update channel finder property names and tags
	* update machines/element

2012-07-20  Lingyun Yang  <lyyang@nsls2yang>

	* add list of elements support in getElements

2012-07-10  Lingyun Yang  <lyyang@nsls2yang>

	* remove return_list from getElements. Now always returns a list
	* update document index, faq
	* add commands doc
	* add import_csv_2 for channel finder agent class
	* add initTLS and simple tests
	* add tls config file, first stage
	* add script to convert madx output(twiss) for chan finder.
	* add source for initTLS
	* add stepSize for CaElement and CaDecorator
	* add boundary for CaElement and CaDecorator
	* remove addEGet and addEPut from CaElement
	* remove eget from hlalib.py
	* cleaned up unit test
	* add new eget function
	* add commands doc as top level set of tools.

2012-07-06  Lingyun Yang  <lyyang@lsasd2>

	* add set/get field for CaElement

2012-04-02  Lingyun Yang  <lyyang@nsls2yang.nsls2.bnl.gov>
