@@ -271,15 +271,25 @@ def fget(*argv, **kwargs):
     >>> fget("BPM", "x")
     >>> fget([(bpm1, 'x'), (bpm2, 'y')])
     """
-    if len(argv) == 1:
-        elem, fld = zip(*(argv[0]))
-        return _fget_2(elem, fld, **kwargs)
-    elif len(argv) == 2:
-        elst = getElements(argv[0])
-        if not elst: return None
-        return _fget_2(elst, [argv[1]] * len(elst), **kwargs)
-    else:
-        raise RuntimeError("Unknown input {0}".format(argv))
+    sample = kwargs.pop("sample", 5)
+    dt = kwargs.pop("sleep", 0.15)
+    rawd = []
+    for i in range(sample):
+        if len(argv) == 1:
+            elem, fld = zip(*(argv[0]))
+            d = _fget_2(elem, fld, **kwargs)
+        elif len(argv) == 2:
+            elst = getElements(argv[0])
+            if not elst: return None
+            d = _fget_2(elst, [argv[1]] * len(elst), **kwargs)
+        else:
+            raise RuntimeError("Unknown input {0}".format(argv))
+        rawd.append(d)
+        if i < sample - 1:
+            time.sleep(dt)
+
+    return np.average(np.array(rawd), axis=-1)
+
 
 def _fget_2(elst, field, **kwargs):
     """get elements field values for a family
